--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <span class="badge badge-white badge-pill profile-designation">Engenheiro Mecânico</span>
             </div>
             <nav class="social-links">
-                <a href="#!" class="social-link"><i class="fab fa-facebook-f"></i></a>
-                <a href="#!" class="linkedin.com/luanzzxx"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#!" class="github.com/luaneng"><i class="fab fa-github"></i></a>
+                <a href="#!" class="https://grabcad.com/luan.henrique-11/models"> <i class="fas fa-drafting-compass " ></i></a>
+                <a href="#!" class="linkedin.com/luanzzxx"><i class="fab fa-linkedin-in " > </i></a>
+                <a href="#!" class="github.com/luaneng"><i class="fab fa-github"> </i></a>
             </nav>
             <div class="widget">
                 <h5 class="widget-title">Informações Pessoais</h5>
@@ -45,7 +45,7 @@
                     <p>EMAIL : launoliveiar@gmail.com</p>
                     <p>ENDEREÇO : <a href="https://goo.gl/maps/g3YFnzuBhQuAjz7YA">Guarapuava-PR, Vila Bela</a></p>
                     <button class="btn btn-download-cv btn-primary rounded-pill"> <img src="assets/images/download.svg" alt="download"
-                        class="btn-img">DOWNLOAD CV </button>
+                        class="btn-img"><a href="https://drive.google.com/file/d/1Gl5ajKC_g90UPr2rEuTsfqhd7AFmumIZ/view?usp=sharing" style="color:#ffffff;">DOWNLOAD</a></button>
                 </div>
             </div>
             <div class="widget card">
