--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
             COMPARTILHAR</button>
         <nav class="collapsible-nav" id="collapsible-nav">
             <a href="index.html" class="nav-link">HOME</a>
-            <a href="contact.html" class="nav-link">CONTACTO</a>
+            <a href="contact.html" class="nav-link">CONTATO</a>
         </nav>
         <button class="btn btn-menu-toggle btn-white rounded-circle" data-toggle="collapsible-nav"
             data-target="collapsible-nav"><img src="assets/images/hamburger.svg" alt="hamburger"></button>
@@ -32,9 +32,9 @@
                 <span class="badge badge-white badge-pill profile-designation">Engenheiro Mecânico</span>
             </div>
             <nav class="social-links">
-                <a href="#!" class="https://grabcad.com/luan.henrique-11/models"> <i class="fas fa-drafting-compass " ></i></a>
-                <a href="#!" class="linkedin.com/luanzzxx"><i class="fab fa-linkedin-in " > </i></a>
-                <a href="#!" class="github.com/luaneng"><i class="fab fa-github"> </i></a>
+                <a href="grabcad.com/luan.henrique-11/models"> <i class="fas fa-drafting-compass " ></i></a>
+                <a href="linkedin.com/luanzzxx"><i class="fab fa-linkedin-in " > </i></a>
+                <a href="github.com/luaneng"><i class="fab fa-github"> </i></a>
             </nav>
             <div class="widget">
                 <h5 class="widget-title">Informações Pessoais</h5>
