--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <span class="badge badge-white badge-pill profile-designation">Engenheiro Mecânico</span>
             </div>
             <nav class="social-links">
-                <a href="#!" class="https://grabcad.com/luan.henrique-11/models"> <i class="fas fa-drafting-compass " ></i></a>
-                <a href="#!" class="linkedin.com/luanzzxx"><i class="fab fa-linkedin-in " > </i></a>
-                <a href="#!" class="github.com/luaneng"><i class="fab fa-github"> </i></a>
+                <a href="grabcad.com/luan.henrique-11/models"> <i class="fas fa-drafting-compass " ></i></a>
+                <a href="linkedin.com/luanzzxx"><i class="fab fa-linkedin-in " > </i></a>
+                <a href="github.com/luaneng"><i class="fab fa-github"> </i></a>
             </nav>
             <div class="widget">
                 <h5 class="widget-title">Informações Pessoais</h5>
