--- a/index.html
+++ b/index.html
@@ -14,38 +14,8 @@
 
 <body>
     <header>
-
-<div class="container">
-        <button class="btn-share">
-            <i class="fas fa-share-alt"></i>
-        </button>
-        <div class="share-options">
-            <p class="title">Compartilhar</p>
-            <div class="social-media">
-                <a target="_blank" rel="noopener noreferrer" href="whatsapp://send?text=https://luaneng.github.io/profile/">
-                    <button class="social-media-btn"><i class="fab fa-whatsapp"></i></button></a>
-                </a>
-                <a target="_blank" rel="noopener noreferrer" href="https://mail.google.com/mail/?view=cm&to=%7Bemail_address%7D&su=&body=https://luaneng.github.io/profile/&bcc=%7Bemail_address%7D&cc=%7Bemail_address%7D">
-                    <button class="social-media-btn"><i class="fab fa-google"></i></button></a>
-                </a>
-                <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/intent/tweet?url=https://luaneng.github.io/profile/&text=&via=">
-                    <button class="social-media-btn"><i class="fab fa-twitter"></i></button></a>
-                </a>
-                <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/sharer/sharer.php?u=https%3A//luaneng.github.io/profile/">
-                    <button class="social-media-btn"><i class="fab fa-facebook-f"></i></button></a>
-                </a>
-                <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/shareArticle?url=https://luaneng.github.io/profile/&title=">
-                    <button class="social-media-btn"><i class="fab fa-linkedin-in"></i></button></a>
-                </a>
-
-            </div>
-            <div class="link-container">
-                <p class="link">luaneng.github.io/profile</p>
-                <button onclick="copyToClipboard('https://luaneng.github.io/profile')" class="copy-btn">copiar</button>
-            </div>
+        <div class="container">
         </div>
-    </div>
-
         <nav class="collapsible-nav" id="collapsible-nav">
             <a href="index.html" class="nav-link">HOME</a>
             <a href="contact.html" class="nav-link">CONTATO</a>
@@ -297,11 +267,45 @@
                         <li data-target="#testimonialCarousel" data-slide-to="2"></li>
                     </ol>
                 </div>
+                
             </section>
+            <div class="container">
+                <button class="btn-share">
+                    <i class="fas fa-share-alt"></i>
+                </button>
+                <div class="share-options">
+                    <p class="title">Compartilhar</p>
+                    <div class="social-media">
+                        <a target="_blank" rel="noopener noreferrer" href="whatsapp://send?text=https://luaneng.github.io/profile/">
+                            <button class="social-media-btn"><i class="fab fa-whatsapp"></i></button></a>
+                        </a>
+                        <a target="_blank" rel="noopener noreferrer" href="https://mail.google.com/mail/?view=cm&to=%7Bemail_address%7D&su=&body=https://luaneng.github.io/profile/&bcc=%7Bemail_address%7D&cc=%7Bemail_address%7D">
+                            <button class="social-media-btn"><i class="fab fa-google"></i></button></a>
+                        </a>
+                        <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/intent/tweet?url=https://luaneng.github.io/profile/&text=&via=">
+                            <button class="social-media-btn"><i class="fab fa-twitter"></i></button></a>
+                        </a>
+                        <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/sharer/sharer.php?u=https%3A//luaneng.github.io/profile/">
+                            <button class="social-media-btn"><i class="fab fa-facebook-f"></i></button></a>
+                        </a>
+                        <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/shareArticle?url=https://luaneng.github.io/profile/&title=">
+                            <button class="social-media-btn"><i class="fab fa-linkedin-in"></i></button></a>
+                        </a>
+        
+                    </div>
+                    <div class="link-container">
 
+                        <textarea id="textArea">https://luaneng.github.io/profile</textarea>
+                        <button onclick="copyToClipBoard()" class="copy-btn">Copiar</button>
+
+
+                    </div>
+                </div>
+            </div>
             <footer>Live Resume @ <a href="https://www.bootstrapdash.com" target="_blank" rel="noopener noreferrer">BootstrapDash</a>. All Rights Reserved 2020</footer>
         </main>
     </div>
+
     <script src="assets/vendors/jquery/dist/jquery.min.js"></script>
     <script src="assets/vendors/@popperjs/core/dist/umd/popper-base.min.js"></script>
     <script src="assets/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
