--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
             <div class="profile-img-wrapper">
                 <img src="assets/images/Profile.png" alt="profile">
             </div>
-            <h1 class="profile-name">Luan Henrique</h1>
+            <h1 class="profile-name">Luan H. de Oliveira</h1>
             <div class="text-center">
                 <span class="badge badge-white badge-pill profile-designation">Engenheiro Mecânico</span>
             </div>
