--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <p>EMAIL : launoliveiar@gmail.com</p>
                     <p>ENDEREÇO : <a target="_blank" rel="noopener noreferrer" href="https://goo.gl/maps/g3YFnzuBhQuAjz7YA">Guarapuava-PR, Vila Bela</a></p>
                     <button class="btn btn-download-cv btn-primary rounded-pill"> <img src="assets/images/download.svg" alt="download"
-                        class="btn-img"><a target="_blank" rel="noopener noreferrer" href="https://drive.google.com/file/d/1Gl5ajKC_g90UPr2rEuTsfqhd7AFmumIZ/view?usp=sharing" style="color:#ffffff;">DOWNLOAD</a></button>
+                        class="btn-img"><a target="_blank" rel="noopener noreferrer" href="https://github.com/luaneng/profile/raw/main/assets/cv.pdf" style="color:#ffffff;">DOWNLOAD</a></button>
                 </div>
             </div>
             <div class="widget card">
@@ -80,7 +80,7 @@
             <section class="intro-section">
                 <h2 class="section-title">Olá!</h2>
                 <p>Descrição geral.</p>
-                <a href="#!" class="btn btn-primary btn-hire-me">HIRE ME</a>
+                <a href="contact.html" class="btn btn-primary btn-hire-me">CONTRATE-ME</a>
             </section>
             <section class="resume-section">
                 <div class="row">
@@ -255,41 +255,14 @@
                         </div>
                     </div>
                 </div>
- 
-            <div class="container">
-                <button class="btn-share">
-                    <i class="fas fa-share-alt"></i>
-                </button>
-                <div class="share-options">
-                    <p class="title">Compartilhar</p>
-                    <div class="social-media">
-                        <a target="_blank" rel="noopener noreferrer" href="whatsapp://send?text=https://luaneng.github.io/profile/">
-                            <button class="social-media-btn"><i class="fab fa-whatsapp"></i></button></a>
-                        </a>
-                        <a target="_blank" rel="noopener noreferrer" href="https://mail.google.com/mail/?view=cm&to=%7Bemail_address%7D&su=&body=https://luaneng.github.io/profile/&bcc=%7Bemail_address%7D&cc=%7Bemail_address%7D">
-                            <button class="social-media-btn"><i class="fab fa-google"></i></button></a>
-                        </a>
-                        <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/shareArticle?url=https://luaneng.github.io/profile/&title=">
-                            <button class="social-media-btn"><i class="fab fa-linkedin-in"></i></button></a>
-                        </a>
-        
-
-                    </div>
-                    <div class="link-container">
-                        <textarea id="textArea" class="link">https://luaneng.github.io/profile</textarea>
-                        <button onclick="copyToClipBoard()" class="copy-btn">Copiar</button>
-                    </div>
-
-                </div>
-            </div>
-            
+            </section>
             <footer>Live Resume @ <a href="https://www.bootstrapdash.com" target="_blank" rel="noopener noreferrer">BootstrapDash</a>. All Rights Reserved 2020</footer>
         </main>
     </div>
-
     <script src="assets/vendors/jquery/dist/jquery.min.js"></script>
     <script src="assets/vendors/@popperjs/core/dist/umd/popper-base.min.js"></script>
     <script src="assets/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="assets/vendors/entry/jq.entry.min.js"></script>
     <script src="assets/js/live-resume.js"></script>
 </body>
 
